--- a/AG-OutsourcingPlatform/server/bin/option-file/wechat-deploy.toml
+++ b/AG-OutsourcingPlatform/server/bin/option-file/wechat-deploy.toml
@@ -1,6 +1,6 @@
 
-#模拟登陆成功后跳转的域名
- ClientDomain="chuil.online:6616/#/"
+#模拟登陆成功后跳转的域名,开发 生成 发布均要一个
+ ClientDomain="chuil.online/ospf/#/"
 
 #微信公众号相关
 AppID="wx9fb20dfa92465ddd"
